Alteracoes em message, sender e receiver