@@ -1,17 +1,23 @@
 import java.net.InetAddress;
 import java.util.ArrayList;
+import java.util.LinkedList;
+import java.util.concurrent.LinkedBlockingDeque;
 
 public class MessageQueue {
-    public ArrayList<String> queue;
+    public LinkedList<String> queue;
 
     // Adiciona a mensagem na fila
     public void addMessage(String message){
         this.queue.add(message);
     }
 
+    public void addFirstMessage(String message){
+        this.queue.addFirst(message);
+    }
+
     // Retorna a primeira mensagem da fila
     public String removeMessage(){
-        String msg = this.queue.remove(0);
+        String msg = this.queue.removeFirst();
         return msg;
     }
 
